# django-blickk-bot

./: .flake8  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
django_blickk_bot/: asgi.py  settings.py  urls.py  wsgi.py
recommendation/: admin.py  bot.py  models.py  services.py
recommendation/management/commands/: bot.py
recommendation/migrations/: 0001_initial.py  0002_movie_recommendation.py  0003_auto_20201111_1028.py  0004_auto_20201111_1045.py  0005_auto_20201111_1059.py  0006_auto_20201111_1101.py  0007_moviecategorystate.py  0008_remove_moviecategorystate_category.py  0009_auto_20201111_1127.py  0010_auto_20201111_1204.py  0011_auto_20201111_1253.py  0012_auto_20201111_1348.py  0013_message.py
settings/: config.py
